[tool.poetry]
name = "breast-cancer"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
ipykernel = "^6.29.5"
kaggle = "^1.6.17"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"
sidetable = "^0.9.1"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
